--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -11,4 +11,8 @@
   <p>
     If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
   </p>
+    <button ion-button (click)="openPage('Exemplo1Page')">Ex1</button>
+    <button ion-button (click)="openPage('Exemplo2Page')">Ex2</button>
+    <button ion-button (click)="openPage('Exemplo3Page')">Ex3</button>
+    <button ion-button (click)="openPage('Exemplo4Page')">Ex4</button>
 </ion-content>
